<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".HospitalAdvicesActivity" >
 <FrameLayout
        android:id="@+id/advices_view_stub"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dip" >

    </FrameLayout>
    <Button
        android:id="@+id/hospital_advices_send_button"
        style="@style/ServandoBlueButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dip"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="3dip"
        android:text="@string/hospital_advices_button" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/TitleBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="@string/hospital_advices_activity_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/select_reason_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="14dp"
            android:text="@string/hospital_advices_select_advice_message"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:entries="@array/advices_reasons" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/hospital_advices_select_when"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/hospital_advices_comment"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/hospital_advice_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hospital_advices_hint"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</RelativeLayout>