<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dizznessScroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

          <TextView
            android:id="@+id/sending_sympton_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/symptom_emergency_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="180dip"
            android:src="@drawable/symptom_emergency" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/symptom_default_comment" />

        <EditText
            android:id="@+id/symptom_comment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/symptom_comment_hint"
            android:inputType="textMultiLine" >
        </EditText>

    </LinearLayout>

</ScrollView>